--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/01-code.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "01": "tsc && node ./dist/01-code.js"
+    "01": "tsc && node ./dist/01-code.js",
+    "02": "tsc && node ./dist/02-code.js"
   },
   "author": "",
   "license": "ISC",
